# cuda-doom-v2

./: CMakeLists.txt
.github/workflows/: cmake.yml
linuxdoom-1.10/: CMakeLists.txt  am_map.c  am_map.cpp  custom_mix_pitch.c  custom_mix_pitch.cpp  custom_mix_pitch.h  custom_mix_pitch_callback.h  d_englsh.h  d_main.c  d_main.cpp  d_net.c  d_net.cpp  d_player.h  d_think.h  doomdef.h  f_finale.c  f_finale.cpp  f_wipe.c  f_wipe.cpp  g_game.c  g_game.cpp  gl_window.h  glsl_program.h  glsl_shader.h  i_net.cpp  i_sound.c  i_sound.cpp  i_video.c  i_video.cpp  info.cpp  info.h  m_bbox.h  m_fixed.h  m_menu.cpp  m_misc.c  m_misc.cpp  midi_converter.c  midi_converter.cpp  midi_converter.h  mus_parser.c  (+70 more)
linuxdoom-1.10/geometry/: CMakeLists.txt  common.cpp  common.h  polygon.cpp  polygon.h  triangulation.cpp  triangulation.h  winding.h
linuxdoom-1.10/opengl/: CMakeLists.txt  common.cpp  common.h
linuxdoom-1.10/renderer/: CMakeLists.txt  autofocus.cu  autofocus.cuh  camera.cu  camera.cuh  cuda_utils.cuh  device_fixed_vector.cuh  device_material.cu  device_material.cuh  device_sprite.cu  device_sprite.cuh  device_stack.cuh  device_texture.cu  device_texture.cuh  device_texture_loader.cu  intersection.cuh  map_thing.cu  map_thing.cuh  ray.cuh  renderer.cu  renderer.cuh  scene.cu  scene.cuh  scene_entity.cu  scene_entity.cuh  square.cu  square.cuh  transform.cuh  triangle.cu  triangle.cuh
linuxdoom-1.10/wad/: CMakeLists.txt  graphics_data.cu  graphics_data.cuh  lump_reader.cuh  map.cu  map.cuh  sprites.cu  sprites.cuh  wad.cu  wad.cuh
test/: CMakeLists.txt
test/geometry/: CMakeLists.txt  polygon.cpp
